--- a/cacheread.conf
+++ b/cacheread.conf
@@ -1,6 +1,6 @@
 modules {
     module {
-       name = "example"
+       name = "cacheread"
        language = "python"
 }
 
@@ -8,6 +8,6 @@ collection_group {
     collect_every = 10
     time_threshold = 180
     metric {
-      name_match = "example"
+      name_match = "cacheread"
 }
 }
